fixed bug with invisible selection

--- a/src/stories/custom-autocomplete/style.css
+++ b/src/stories/custom-autocomplete/style.css
@@ -13,6 +13,9 @@
 
 custom-autocomplete {
   max-width: 300px;
+  a {
+    color: white;
+  }
 }
 
 .example-customizing {
